# sql-server-licensing-training-accelerator

./: README.md  azure.yaml
.devcontainer/: devcontainer.json  post-create.sh
.github/codespaces/: devcontainer.json
backend/: pyproject.toml
backend/app/: main.py
frontend/: .env  .env.example  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Admin.tsx  Calculator.tsx  Dashboard.tsx  FAQ.tsx  ScenarioDetail.tsx  Scenarios.tsx  TopicDetail.tsx  Topics.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
other-ideas/ai-sidecar-proxy-complete/ai-sidecar-showcase/frontend/: package-lock.json  package.json
other-ideas/ai-sidecar-proxy-complete/rust-ai-sidecar-proxy/: Cargo.toml
other-ideas/ai-sidecar-proxy-complete/rust-ai-sidecar-proxy/src/: ai.rs  config.rs  lib.rs  load_balancer.rs  proxy.rs
other-ideas/distributed-cache-sidecar/: DEPLOYMENT.md  LOCAL_DEMO.md  README.md
other-ideas/distributed-cache-sidecar/backend/: Dockerfile  go.mod  handlers.go
other-ideas/distributed-cache-sidecar/frontend/: .env  index.html  package-lock.json  package.json
other-ideas/monitoring-productivity-system/monitoring-backend/: pyproject.toml
other-ideas/monitoring-productivity-system/monitoring-frontend/: .env  package-lock.json  package.json
other-ideas/sail-summit-registration-complete/sail-summit-backend/: pyproject.toml
other-ideas/sail-summit-registration-complete/sail-summit-frontend/: .env  index.html  package-lock.json  package.json
(+24 files in other folders)
