[package]
name = "ai-sidecar-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance AI-driven sidecar proxy for autonomous service mesh operations"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dashmap = "5.5"
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
http = "1.0"
